fixed menu on smaller screen

--- a/Eindproject_HTML/sass/styling/_navbar.scss
+++ b/Eindproject_HTML/sass/styling/_navbar.scss
@@ -10,7 +10,8 @@ $fontSize: (
 );
 
 .navBar {
-  position: relative;
+  position: sticky;
+  top: 0;
   width: 100%;
   height: 90px;
   display: flex;
@@ -18,7 +19,7 @@ $fontSize: (
   align-items: center;
   background-color: $background;
   padding: 0 25px;
-  // transition:;
+  transition: 0.3s;
   border: 5px solid $textColor;
 }
 
@@ -45,7 +46,6 @@ $fontSize: (
     flex-direction: row;
     align-items: center;
     z-index: 1;
-    // transition:;
 
     li {
       list-style-type: none;
@@ -57,7 +57,7 @@ $fontSize: (
         padding: 40px 25px;
         // font-size: ;
         // line-height:;
-        // transition: ;
+        transition: 0.3s;
       }
 
       a:hover {
@@ -120,18 +120,21 @@ $fontSize: (
 
   .navMenu input:checked ~ .hamburgerMenu::before {
     top: 0;
-    transform: rotate(35deg);
+    transform: rotate(135deg);
     width: 30px;
   }
 
   .navMenu input:checked ~ .hamburgerMenu::after {
     top: 0;
-    transform: rotate(-35deg);
+    transform: rotate(-135deg);
     width: 30px;
   }
 
+  .navMenu input:checked ~ ul {
+     right: 0;
+  }
 
-  //media querry after below
+
 
   @media screen and (max-width: 645px) {
     .hamburgerMenu,
@@ -139,25 +142,19 @@ $fontSize: (
       display: block;
     }
     
-    // .navLogo{
-    //   a{
-    //     img{
-    //       z-index: 5;
-    //     }
-    //   }
-    // }
+     .navMenu{
 
-    .navMenu{
+
       ul{
         justify-content: start;
         flex-direction: column;
         align-items: start;
         position: fixed;
         top: 70px;
-        right: 0;
+        right: -100%;
         background-color: $background;
-        // border-top: 5px solid $textColor;
-        // border-right: 5px solid $textColor;
+        border-left: 5px solid $textColor;
+        border-right: 5px solid $textColor;
         width: 100%;
         height:100%;
         padding-top: 30px;
